previous/test-1/bs23-task1/app1/deploy/bs23-app1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bs23-app1
spec:
  selector:
    app: bs23-app1
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
