previous/test-1/bs23-task1/app1/deploy/app1-istio-route-vs-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app1-gateway
spec:
  selector:
    # Which pods we want to expose as Istio router 
    # This label points to the default one installed from file istio-demo.yaml
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # Here we specify which Kubernetes service names
    # we want to serve through this Gateway
    hosts:
    - app1.example.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app1-virtual-service
spec:
  hosts:
  - '*'
  gateways:
  - app1-gateway
  http:
  - route:
    - destination:
        host: bs23-app1
        subset: app1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bs23-app1
spec:
  host: bs23-app1
  subsets:
  - name: app1
    labels:
            app: bs23-app1
